<resources>
    <string name="app_name">Lets Note</string>
    <string name="ok">Ok</string>
    <string name="alert_title">Peringatan</string>
    <string name="loading_message">Loading</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_timeline">Timeline</string>
    <string name="nav_mynotes">My Notes</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Timeline</item>
        <item>My Notes</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="faq">FAQ</string>
    <string name="aboutus">About Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
